airflow/logs/dag_id=dag_to_dum_raw_data_to_postgres/run_id=manual__2023-12-23T12:07:52.181261+00:00/task_id=create_raw_data_storing_tables/attempt=1.log
[2023-12-23T12:07:53.414+0000] {taskinstance.py:1957} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: dag_to_dum_raw_data_to_postgres.create_raw_data_storing_tables manual__2023-12-23T12:07:52.181261+00:00 [queued]>
[2023-12-23T12:07:53.440+0000] {taskinstance.py:1957} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: dag_to_dum_raw_data_to_postgres.create_raw_data_storing_tables manual__2023-12-23T12:07:52.181261+00:00 [queued]>
[2023-12-23T12:07:53.443+0000] {taskinstance.py:2171} INFO - Starting attempt 1 of 6
[2023-12-23T12:07:53.507+0000] {taskinstance.py:2192} INFO - Executing <Task(PostgresOperator): create_raw_data_storing_tables> on 2023-12-23 12:07:52.181261+00:00
[2023-12-23T12:07:53.523+0000] {standard_task_runner.py:60} INFO - Started process 3236 to run task
[2023-12-23T12:07:53.529+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'dag_to_dum_raw_data_to_postgres', 'create_raw_data_storing_tables', 'manual__2023-12-23T12:07:52.181261+00:00', '--job-id', '1200', '--raw', '--subdir', 'DAGS_FOLDER/dump_raw_data_to_postgres.py', '--cfg-path', '/tmp/tmp4so6us8q']
[2023-12-23T12:07:53.531+0000] {standard_task_runner.py:88} INFO - Job 1200: Subtask create_raw_data_storing_tables
[2023-12-23T12:07:53.622+0000] {task_command.py:423} INFO - Running <TaskInstance: dag_to_dum_raw_data_to_postgres.create_raw_data_storing_tables manual__2023-12-23T12:07:52.181261+00:00 [running]> on host 3d316bc74082
[2023-12-23T12:07:53.741+0000] {taskinstance.py:2481} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='10 academy' AIRFLOW_CTX_DAG_ID='dag_to_dum_raw_data_to_postgres' AIRFLOW_CTX_TASK_ID='create_raw_data_storing_tables' AIRFLOW_CTX_EXECUTION_DATE='2023-12-23T12:07:52.181261+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2023-12-23T12:07:52.181261+00:00'
[2023-12-23T12:07:53.742+0000] {sql.py:276} INFO - Executing: create table if not exists raw_vehicle (
    track_id SERIAL PRIMARY KEY,
    type VARCHAR(255),
    traveled_d FLOAT,
    avg_speed FLOAT
);
create table if not exists raw_vehicle_trajectory(
    id SERIAL PRIMARY KEY,
    lat FLOAT,
    lon FLOAT,
    speed FLOAT,
    lon_acc FLOAT
    lat_acc FLOAT
    time FLOAT
    track_id INT FOREIGN KEY REFERENCEs raw_vehicle(track_id)
)
[2023-12-23T12:07:53.756+0000] {base.py:83} INFO - Using connection ID 'week_two_dwh' for task execution.
[2023-12-23T12:07:53.770+0000] {base.py:83} INFO - Using connection ID 'week_two_dwh' for task execution.
[2023-12-23T12:07:53.783+0000] {sql.py:432} INFO - Running statement: create table if not exists raw_vehicle (
    track_id SERIAL PRIMARY KEY,
    type VARCHAR(255),
    traveled_d FLOAT,
    avg_speed FLOAT
);
create table if not exists raw_vehicle_trajectory(
    id SERIAL PRIMARY KEY,
    lat FLOAT,
    lon FLOAT,
    speed FLOAT,
    lon_acc FLOAT
    lat_acc FLOAT
    time FLOAT
    track_id INT FOREIGN KEY REFERENCEs raw_vehicle(track_id)
), parameters: None
[2023-12-23T12:07:53.788+0000] {taskinstance.py:2699} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 437, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "lat_acc"
LINE 13:     lat_acc FLOAT
             ^

[2023-12-23T12:07:53.803+0000] {taskinstance.py:1138} INFO - Marking task as UP_FOR_RETRY. dag_id=dag_to_dum_raw_data_to_postgres, task_id=create_raw_data_storing_tables, execution_date=20231223T120752, start_date=20231223T120753, end_date=20231223T120753
[2023-12-23T12:07:53.828+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 1200 for task create_raw_data_storing_tables (syntax error at or near "lat_acc"
LINE 13:     lat_acc FLOAT
             ^
; 3236)
[2023-12-23T12:07:53.870+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2023-12-23T12:07:53.932+0000] {taskinstance.py:3281} INFO - 0 downstream tasks scheduled from follow-on schedule check
